--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,162 +1,92 @@
-@import "fonts.css";
-
 body {
-    font-family: Inter, Helvetica, Arial, sans-serif;
-    margin: 0 auto;
-    width: 600px;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+    background-color: #fff;
+    color: #000;
 }
 
-#page-wrapper {
+.container {
+    width: 80%;
+    max-width: 900px;
+    margin: 30px auto;
+    padding: 20px;
+    border: 1px solid #000;
+    box-shadow: 5px 5px 0 #000;
+}
+
+h1,
+h2,
+h3 {
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    font-size: 2em;
+    border-bottom: 2px solid #000;
+    padding-bottom: 5px;
+}
+
+h2 {
+    font-size: 1em;
+    margin-top: 20px;
+    text-transform: uppercase;
+    border-bottom: 1px solid #000;
+}
+
+h3 {
+    font-size: 1em;
+}
+
+.section {
+    margin-bottom: 20px;
+}
+
+.section li div.position h3, #projects h3 {
+    display: inline;
+}
+
+.company-location, .date-range {
+    font-style: italic;
+    margin: 1em 0;
+}
+
+.tools {
+    margin: 10px 0;
+}
+
+.contact-info {
     display: flex;
-    flex-direction: column;
-    margin: 5px;
+    justify-content: space-between;
+    font-size: 0.9em;
 }
 
 #header {
-    flex: 1;
-}
-
-#cv-body {
-    flex: 1;
-}
-
-#user-credentials {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
-#profile-picture {
-    padding-right: 10px;
-    padding-top: 3px;
-}
-
-#profile-picture img {
-    width: 145px;
-    height: 145px;
-}
-
-#header #user-name {
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 28px;
-    padding-top: 30px;
-}
-
-#role-to-apply {
-    font-weight: 400;
-    font-size: 18px;
-    margin-top: 5px;
-    padding-bottom: 30px;
-}
-
-#contacts {
+#photo-container {
     display: flex;
-    font-weight: 600;
-    font-size: 12px;
-    padding: 10px 0;
-    border-top: 1px solid lightgrey;
+    flex: 1;
+    width: 10em;
+    height: 10em;
+    margin: 0 2em;
 }
 
-#contacts div {
+#info-container {
+    display: flex;
+    flex-direction: column;
     flex: 4;
 }
 
-#contacts div i {
-    margin-right: 5px;
+#name, #job-title {
+    font-weight: bold;
 }
 
-a {
-    color: black;
-}
-
-a:hover {
-    color: red;
-}
-
-#key-technologies {
-    font-size: 14px;
-    margin-bottom: 10px;
-    border-top: 1px solid lightgrey;
-    padding: 10px 0;
-}
-
-#technology-table {
-    display: flex;
-    flex-direction: column;
-}
-
-.table-row {
-    display: flex;
-    flex: 1;
-}
-
-.table-row div {
-    padding: 2px 0;
-}
-
-.technology-section-name {
-    flex: 1;
-}
-
-.technology-list {
-    flex: 3;
-    border-left: 1px solid lightgrey;
-    padding-left: 10px !important;
-}
-
-.cv-section-wrapper {
-    display: flex;
-    margin-bottom: 10px;
-    border-top: 1px solid lightgrey;
-    padding-top: 15px;
-    font-size: 16px;
-}
-
-.section-name {
-    flex: 1;
-    text-transform: uppercase;
-    font-weight: 600;
-}
-
-.section-list-item-wrapper {
-    flex: 3;
-}
-
-.section-list-item {
-    margin-bottom: 10px;
-    border-left: 1px solid lightgrey;
-    padding: 5px;
-}
-
-.education-details, .job-details, #cv-body .user-feedback {
-    border-top: 1px solid lightgrey;
-    padding-top: 5px;
-}
-
-.university-degree, .job-title, #cv-body .user-name {
-    font-weight: 600;
-}
-
-.university-name, .company-name {
-    font-size: 14px;
-    font-weight: 500;
-}
-
-.company-location {
-    color: dimgrey;
-}
-
-.date-period, #cv-body .user-position {
-    font-size: 12px;
-    font-weight: 600;
-    padding-bottom: 5px;
-    padding-top: 10px;
-}
-
-.job-details ul {
-    margin: 5px 0;
-}
-
-.job-details, #cv-body .user-feedback {
-    font-size: 14px;
+#name {
+    margin: 1em 0;
 }
